--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 					</div>
 				</div> -->
 
-				<section class="section section-parallax section-height-3 border-0 m-0" data-plugin-parallax data-plugin-options="{'speed': 7, 'parallaxHeight': '150%', 'offset': 100}" data-image-src="img/parallax/parallax-corporate-1-1.jpg">
+				<!-- <section class="section section-parallax section-height-3 border-0 m-0" data-plugin-parallax data-plugin-options="{'speed': 7, 'parallaxHeight': '150%', 'offset': 100}" data-image-src="img/parallax/parallax-corporate-1-1.jpg">
 					<div class="container pb-5 mb-5">
 						<div class="row text-center pb-5 mb-5">
 							<div class="col-md-10 mx-md-auto pb-5 mb-5">
@@ -232,46 +232,49 @@
 							</div>
 						</div>
 					</div>
-				</section>
+				</section> -->
 
 				<section class="section bg-color-grey-scale-1 section-height-3 border-0 m-0">
 					<div class="container">
 						<div class="row">
 							<div class="col">
-								<h2 class="font-weight-normal text-center text-6 pb-3">Our <strong class="font-weight-extra-bold">Services</strong></h2>
+								<h2 class="font-weight-normal text-center text-6 pb-3">我們的 <strong class="font-weight-extra-bold">產品</strong></h2>
 							</div>
 						</div>
 						<div class="row mb-lg-4">
 							<div class="col-lg-4 appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="300">
 								<div class="feature-box feature-box-style-2">
 									<div class="feature-box-icon">
-										<i class="icons icon-support text-color-primary"></i>
+										<!-- <i class="icons icon-support"></i> -->
+										<i class="fas fa-satellite-dish text-color-primary"></i>
 									</div>
 									<div class="feature-box-info">
-										<h4 class="font-weight-bold mb-2">Customer Support</h4>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing <span class="alternative-font">metus.</span> elit. Quisque rutrum pellentesque imperdiet.</p>
+										<h4 class="font-weight-bold mb-2">無線傳輸</h4>
+										<p>使用手機等級最新無線技術，信號穩定、低幅射、自動對頻、一對一使用不干擾，傳輸距離遠</p>
 									</div>
 								</div>
 							</div>
 							<div class="col-lg-4 appear-animation" data-appear-animation="fadeInUpShorter">
 								<div class="feature-box feature-box-style-2">
 									<div class="feature-box-icon">
-										<i class="icons icon-layers text-color-primary"></i>
+										<!-- <i class="icons icon-layers"></i> -->
+										<i class="fas fa-feather-alt text-color-primary"></i>
 									</div>
 									<div class="feature-box-info">
-										<h4 class="font-weight-bold mb-2">Sliders</h4>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque rutrum pellentesque imperdiet. Nulla lacinia iaculis nulla.</p>
+										<h4 class="font-weight-bold mb-2">羽量級麥克風</h4>
+										<p>全球最輕巧麥克風、無論穿戴/手持皆設計精緻，讓您放開手，防止職業病。另有特殊設計避免教室內迴音/嘯叫</p>
 									</div>
 								</div>
 							</div>
 							<div class="col-lg-4 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="300">
 								<div class="feature-box feature-box-style-2">
 									<div class="feature-box-icon">
-										<i class="icons icon-menu text-color-primary"></i>
+										<!-- <i class="icons icon-menu"></i> -->
+										<i class="fas fa-user-cog text-color-primary"></i>
 									</div>
 									<div class="feature-box-info">
-										<h4 class="font-weight-bold mb-2">Buttons</h4>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque rutrum pellentesque imperdiet. Nulla lacinia iaculis nulla.</p>
+										<h4 class="font-weight-bold mb-2">人體工學工業設計</h4>
+										<p>以使用者習慣出發，輕巧舒適為目標，造型強調產品優美、質感細緻</p>
 									</div>
 								</div>
 							</div>
@@ -280,26 +283,28 @@
 							<div class="col-lg-4 appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="300">
 								<div class="feature-box feature-box-style-2">
 									<div class="feature-box-icon">
-										<i class="icons icon-doc text-color-primary"></i>
+										<!-- <i class="icons icon-doc"></i> -->
+										<i class="fas fa-battery-full text-color-primary"></i>
 									</div>
 									<div class="feature-box-info">
-										<h4 class="font-weight-bold mb-2">HTML5 / CSS3 / JS</h4>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque rutrum pellentesque imperdiet. Nulla lacinia iaculis nulla.</p>
+										<h4 class="font-weight-bold mb-2">長效電池</h4>
+										<p>最佳省電設計與長效電池組合，讓您有最長的使用時間</p>
 									</div>
 								</div>
 							</div>
 							<div class="col-lg-4 appear-animation" data-appear-animation="fadeInUpShorter">
 								<div class="feature-box feature-box-style-2">
 									<div class="feature-box-icon">
-										<i class="icons icon-user text-color-primary"></i>
+										<!-- <i class="icons icon-user"></i> -->
+										<i class="fas fa-hand-holding-heart text-color-primary"></i>
 									</div>
 									<div class="feature-box-info">
-										<h4 class="font-weight-bold mb-2">Icons</h4>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing <span class="alternative-font">metus.</span> elit. Quisque rutrum pellentesque imperdiet.</p>
+										<h4 class="font-weight-bold mb-2">貼心的配件搭配</h4>
+										<p>精心影片介紹與說明書、特製方便Y型 1對2 USB充電線、精選收納袋。讓您有最好的產品體驗</p>
 									</div>
 								</div>
 							</div>
-							<div class="col-lg-4 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="300">
+							<!-- <div class="col-lg-4 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="300">
 								<div class="feature-box feature-box-style-2">
 									<div class="feature-box-icon">
 										<i class="icons icon-screen-desktop text-color-primary"></i>
@@ -309,13 +314,13 @@
 										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque rutrum pellentesque imperdiet. Nulla lacinia iaculis nulla.</p>
 									</div>
 								</div>
-							</div>
+							</div> -->
 						</div>
 					</div>
 				</section>
 
 				<div class="container">
-					<div class="row counters counters-sm py-4 mt-5">
+					<!-- <div class="row counters counters-sm py-4 mt-5">
 						<div class="col-sm-6 col-lg-3 mb-5 mb-lg-0">
 							<div class="counter">
 								<i class="icons icon-user text-color-dark"></i>
@@ -344,11 +349,11 @@
 								<label class="text-4 mt-1">Cups of Coffee</label>
 							</div>
 						</div>
-					</div>
+					</div> -->
 
-					<hr class="solid my-5">
+					<!-- <hr class="solid my-5"> -->
 
-					<div class="row align-items-center pt-4 appear-animation" data-appear-animation="fadeInLeftShorter">
+					<!-- <div class="row align-items-center pt-4 appear-animation" data-appear-animation="fadeInLeftShorter">
 						<div class="col-md-4 mb-4 mb-md-0">
 							<img class="img-fluid scale-2 pr-5 pr-md-0 my-4" src="img/layout-styles.png" alt="layout styles" />
 						</div>
@@ -357,31 +362,49 @@
 							<p class="text-4">There are so many styles you can combine that is possible to create almost any kind of layout based on Porto Template, navigate in our preview and see the header variations, the colors, and the page content types that you will be able to use.</p>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur imperdiet hendrerit volutpat. Sed in nunc nec ligula consectetur mollis in vel justo. Vestibulum ante ipsum primis in faucibus orci.</p>
 						</div>
-					</div>
+					</div> -->
 
-					<hr class="solid my-5">
+					<!-- <hr class="solid my-5"> -->
 
-					<div class="row align-items-center py-5 appear-animation" data-appear-animation="fadeInRightShorter">
-						<div class="col-md-8 pr-md-5 mb-5 mb-md-0">
-							<h2 class="font-weight-normal text-6 mb-3"><strong class="font-weight-extra-bold">Exclusive</strong> Style Switcher</h2>
-							<p class="text-4">With our exlusive Style Switcher you will be able to choose any color you want for your website, choose the layout style (wide / boxed), website type (one page / normal), then generate the css that will be compiled by a {less} proccessor.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur imperdiet hendrerit volutpat. Sed in nunc nec ligula consectetur mollis in vel justo. Vestibulum ante ipsum primis in faucibus orci.</p>
+					<div class="row align-items-center py-4 appear-animation" data-appear-animation="fadeInRightShorter">
+						<div class="col-md-8 pr-md-5 mb-5 mb-md-1">
+							<h2 class="font-weight-normal text-6 mb-3">為什麼要選擇 <strong class="font-weight-extra-bold">養聲堂</strong></h2>
+							<h4 class="mb-0 text-color-secondary">
+								<i class="fas fa-angle-right pr-2"></i>
+								養聲堂誓願做教育者最佳夥伴
+							</h4>
+							<p class="text-3-5">養聲堂誓願做教育者最佳夥伴，結合資深的工業設計、電子、聲學等工程師，專注教學環境領域與行動擴音需求的麥克風的聲學產品開發。</p>
+							<h4 class="mb-0 text-color-secondary">
+								<i class="fas fa-angle-right pr-2"></i>
+								養聲堂產品皆是100% 全新開發產品
+							</h4>
+							<p class="text-3-5">以創新為宗旨，多方面嘗試新科技，重新定義穿戴式科技、做出簡易使用、超輕量無線麥克風。</p>
+							<h4 class="mb-0 text-color-secondary">
+								<i class="fas fa-angle-right pr-2"></i>
+								「數位」無線麥克風
+							</h4>
+							<p class="text-3-5">免對頻、利用數位跳頻技術抗干擾，相鄰教室、使用者之間麥克風不互擾。</p>
+							<h4 class="mb-0 text-color-secondary">
+								<i class="fas fa-angle-right pr-2"></i>
+								絕佳的使用體驗
+							</h4>
+							<p class="text-3-5">養聲堂從產品到配件都以您簡單、方便、舒適、容易上手做規劃，能有不同的體驗。</p>
 						</div>
 						<div class="col-md-4 px-5 px-md-3">
-							<img class="img-fluid scale-2 my-4" src="img/style-switcher.png" alt="style switcher" />
+							<img class="img-fluid scale-6" src="img/app3.png" alt="style switcher" />
 						</div>
 					</div>
 
-					<hr class="solid my-5">
+					<!-- <hr class="solid my-5"> -->
 
-					<div class="row text-center">
+					<!-- <div class="row text-center">
 						<div class="col">
 							<h2 class="font-weight-normal text-6 mt-4">Our <strong class="font-weight-extra-bold">Portfolio</strong></h2>
 						</div>
-					</div>
+					</div> -->
 				</div>
 
-				<div class="image-gallery sort-destination full-width mb-0">
+				<!-- <div class="image-gallery sort-destination full-width mb-0">
 					<div class="isotope-item">
 						<div class="image-gallery-item mb-0">
 							<a href="portfolio-single-wide-slider.html">
@@ -472,9 +495,9 @@
 							</a>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
-				<section class="section section-height-3 section-background section-text-light section-center overlay overlay-show overlay-op-9 overlay-color-primary m-0 appear-animation" data-appear-animation="fadeIn" style="background-image: url(img/bg-corporate-1-1.jpg); background-size: cover; background-position: center;">
+				<!-- <section class="section section-height-3 section-background section-text-light section-center overlay overlay-show overlay-op-9 overlay-color-primary m-0 appear-animation" data-appear-animation="fadeIn" style="background-image: url(img/bg-corporate-1-1.jpg); background-size: cover; background-position: center;">
 					<div class="container">
 						<div class="row justify-content-center">
 							<div class="col-lg-10 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="200">
@@ -513,9 +536,9 @@
 							</div>
 						</div>
 					</div>
-				</section>
+				</section> -->
 
-				<div class="container">
+				<!-- <div class="container">
 					<div class="row text-center pt-4 mt-5">
 						<div class="col">
 							<h2 class="word-rotator slide font-weight-bold text-8 mb-2">
@@ -558,9 +581,9 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
-				<section class="call-to-action call-to-action-strong-grey content-align-center call-to-action-in-footer">
+				<!-- <section class="call-to-action call-to-action-strong-grey content-align-center call-to-action-in-footer">
 					<div class="container">
 						<div class="row">
 							<div class="col-md-9 col-lg-9">
@@ -576,57 +599,58 @@
 							</div>
 						</div>
 					</div>
-				</section>
+				</section> -->
 
 			</div>
 
-			<footer id="footer" class="border-0" style="background: url('img/parallax/parallax-8.jpg'); background-size:cover; background-position: 0 100%;">
-				<div class="container py-4">
-					<div class="row justify-content-md-center py-5 mt-3">
-						<div class="col-md-12 col-lg-3 d-flex align-items-center justify-content-center justify-content-lg-start mb-5 mb-lg-0">
-							<a href="index.html"><img src="img/logo-flat-light.png" alt="Logo" class="img-fluid" style="max-width: 100px;"></a>
-						</div>
-						<div class="col-md-6 col-lg-2 text-center text-lg-left mb-5 mb-lg-0">
-							<h5 class="text-5 text-transform-none font-weight-semibold text-color-light mb-4">Pages</h5>
-							<ul class="list list-unstyled">
-								<li class="mb-1"><a href="page-services.html" class="link-hover-style-1"> Our Services</a></li>
-								<li class="mb-1"><a href="about-us.html" class="link-hover-style-1"> About Us</a></li>
-								<li class="mb-1"><a href="contact-us.html" class="link-hover-style-1"> Contact Us</a></li>
+			<footer id="footer" class="mt-0">
+				<div class="container">
+					<!-- <div class="footer-ribbon">
+						<span>與我聯絡</span>
+					</div> -->
+					<div class="row py-4 my-4">
+						<div class="col-md-5 col-lg-3 mb-5 mb-lg-0 pt-3">
+							<h5 class="text-5 mb-2 pb-1">與我聯絡</h5>
+							<p class="text-light">若您有任何無線麥克風的相關問題，歡迎您與養聲堂聯繫。能為您服務是我們的榮幸。</p>
+							<!-- <p class="text-8 text-color-light font-weight-bold">(800) 123-4567</p> -->
+							<!-- <p class="mb-2">Phone: (02) 2395-5780</p> -->
+							<ul class="list list-icons list-icons-lg">
+								<li class="mb-1"><i class="fas fa-phone-volume text-light"></i><p class="m-0 text-light">(02) 2395-5780</p></li>
+								<li class="mb-1"><i class="far fa-envelope text-light"></i><p class="m-0 text-light"><a class="text-light" href="mailto: younger.tone@gmail.com"> younger.tone@gmail.com</a></p></li>
+								<li class="mb-1"><i class="fab fa-line text-light"></i><p class="m-0 text-light">Line ID : young.tone</p></li>
+							</ul>
+							<!-- <p class="mb-2 text-light">Line ID : young.tone</p> -->
+							<ul class="social-icons mt-4">
+								<li class="social-icons-line"><a href="#" target="_blank" title="Line"><i class="fab fa-line"></i></a></li>
+								<li class="social-icons-facebook"><a href="https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/" target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
 							</ul>
 						</div>
-						<div class="col-md-6 col-lg-2 text-center text-lg-left mb-5 mb-lg-0">
-							<h5 class="text-5 text-transform-none font-weight-semibold text-color-light mb-4">Links</h5>
-							<ul class="list list-unstyled">
-								<li class="mb-1"><a href="page-faq.html" class="link-hover-style-1"> FAQ's</a></li>
-								<li class="mb-1"><a href="sitemap.html" class="link-hover-style-1"> Sitemap</a></li>
-							</ul>
+						<div class="col-md-7 col-lg-4 mb-5 mb-lg-0 pt-3">
+							<h5 class="text-5 mb-2">產品資訊</h5>
+							<p class="text-light">更多公司與產品資訊，請上臉書、Google或 YouTube 輸入"養聲堂"</p>
+							
 						</div>
-						<div class="col-md-6 col-lg-5 text-center text-lg-left">
-							<h5 class="text-5 text-transform-none font-weight-semibold text-color-light mb-4">Newsletter</h5>
-							<div class="alert alert-success d-none" id="newsletterSuccess">
-								<strong>Success!</strong> You've been added to our email list.
+						<div class="col-lg-5 pt-3">
+							<h5 class="text-5 mb-2 pb-1">FaceBook</h5>
+							<div class="fb-page"
+								data-href="https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/"
+								data-tabs="timeline,messages" data-width="250" data-height="400" data-small-header="true"
+								data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false">
+								<blockquote cite="https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/"
+									class="fb-xfbml-parse-ignore">
+									<a
+										href="https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/">養聲堂科技</a>
+								</blockquote>
 							</div>
-							<div class="alert alert-danger d-none" id="newsletterError"></div>
-							<form id="newsletterForm" action="php/newsletter-subscribe.php" method="POST" class="mb-3 mb-md-0">
-								<div class="input-group input-group-rounded">
-									<input class="form-control form-control-sm bg-light" placeholder="Email Address" name="newsletterEmail" id="newsletterEmail" type="text">
-									<span class="input-group-append">
-										<button class="btn btn-light text-color-dark" type="submit"><strong>GO!</strong></button>
-									</span>
-								</div>
-							</form>
-                            <p class="mt-3 mb-0 text-center text-lg-left">
-                                <i class="fab fa-whatsapp text-color-primary"></i><span class="text-color-light opacity-7 pl-2">(800) 123-4567</span>
-                                <i class="far fa-envelope text-color-primary ml-4"></i><a href="mailto:mail@example.com" class="opacity-7 pl-2 text-color-light">mail@example.com</a>
-                            </p>
+							
 						</div>
 					</div>
 				</div>
-				<div class="footer-copyright footer-copyright-style-2 bg-transparent footer-top-light-border">
+				<div class="footer-copyright">
 					<div class="container py-2">
-						<div class="row py-4">
-							<div class="col d-flex align-items-center justify-content-center mb-4 mb-lg-0">
-								<p>© Copyright 2021. All Rights Reserved.</p>
+						<div class="row py-2">
+							<div class="col-lg-7 d-flex align-items-center justify-content-center justify-content-lg-start mb-4 mb-lg-0">
+								<p>© 2021 養聲堂科技有限公司 Young Tone Tech Co., Ltd.</p>
 							</div>
 						</div>
 					</div>
