--- a/service.html
+++ b/service.html
@@ -99,9 +99,8 @@
 																<a class="dropdown-item" href="#">Headers</a>
 															</li>
 															<li>
-																<a class="dropdown-item"
-																	onclick="return gtag_report_conversion('http://youngtone.com.tw/smartMic.htm');"
-																	href="smartMic.html">二代智慧無線麥克風擴音系列</a>
+																<!---onclick="return gtag_report_conversion('http://youngtone.com.tw/smartMic.htm');"--->
+																<a class="dropdown-item" href="smartMic.html">二代智慧無線麥克風擴音系列</a>
 															</li>
 															<li>
 																<a class="dropdown-item" href="YH801.html">一代無線麥克風組</a>
