--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 							</div>
 
 							<!-- Carousel Slide 2 -->
-							<div class="owl-item position-relative" style="height: calc( 100vh - 100px );">
+							<!-- <div class="owl-item position-relative" style="height: calc( 100vh - 100px );">
 								<div class="container position-relative z-index-3 h-100">
 									<div class="row align-items-center h-100">
 										<div class="col-lg-5 d-none d-lg-block">
@@ -191,7 +191,7 @@
 										</div>
 									</div>
 								</div>
-							</div>
+							</div> -->
 						
 						</div>
 					</div>
